Fixed text alignment

--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,14 @@ body {
 .content p {
     font-family: Monserat, sans-serif;
     font-size: 20px;
+    display: flex;
+    justify-content: center;
+    text-align: center
+}
+
+#container1{
+    position:"relative";
+    left: calc(50% - 320px);
 }
 
 .gallery{
@@ -68,9 +76,12 @@ h1.title {
 
 }
 
-h1 {
+.content h1 {
     font-family: 'Poppins', sans-serif;
     font-size: 3em;
+    display: flex;
+    justify-content: center;
+    text-align: center
 }
 
 span.virtual:before {
